--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ project(benchmark-frame-analysis)
 # Find OpenCV, you may need to set OpenCV_DIR variable
 # to the absolute path to the directory containing OpenCVConfig.cmake file
 # via the command line or GUI
+set(raspicam_DIR "/usr/local/lib/cmake")
 find_package(OpenCV REQUIRED)
+find_package(raspicam REQUIRED)
 
 # If the package has been found, several variables will
 # be set, you can find the full list with descriptions
@@ -27,6 +29,8 @@ set(CMAKE_CXX_FLAGS "-std=gnu++11")
 
 # Declare the executable target built from your sources
 add_executable(benchmark-frame-analysis benchmark-frame-analysis.cpp)
+add_executable(raspicam-test raspicam_test.cpp)
 
 # Link your application with OpenCV libraries
-target_link_libraries(benchmark-frame-analysis ${OpenCV_LIBS})
+target_link_libraries(benchmark-frame-analysis ${OpenCV_LIBS} ${raspicam_CV_LIBS})
+target_link_libraries(raspicam-test ${raspicam_CV_LIBS})
