--- a/bcm2835-1.50/src/Makefile
+++ b/bcm2835-1.50/src/Makefile
@@ -371,7 +371,7 @@ AM_DEFAULT_VERBOSITY = 1
 AUTOCONF = autoconf
 AUTOHEADER = autoheader
 AUTOMAKE = automake-1.13
-AWK = mawk
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -409,10 +409,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 1.50
-abs_builddir = /home/pi/lvp/bcm2835-1.50/src
-abs_srcdir = /home/pi/lvp/bcm2835-1.50/src
-abs_top_builddir = /home/pi/lvp/bcm2835-1.50
-abs_top_srcdir = /home/pi/lvp/bcm2835-1.50
+abs_builddir = /home/adam/lvp/bcm2835-1.50/src
+abs_srcdir = /home/adam/lvp/bcm2835-1.50/src
+abs_top_builddir = /home/adam/lvp/bcm2835-1.50
+abs_top_srcdir = /home/adam/lvp/bcm2835-1.50
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -431,7 +431,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/pi/lvp/bcm2835-1.50/install-sh
+install_sh = ${SHELL} /home/adam/lvp/bcm2835-1.50/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
